CLIENT-1108: fix visible css

--- a/src/modules/ui/directives/transactionList/transactionList.less
+++ b/src/modules/ui/directives/transactionList/transactionList.less
@@ -16,7 +16,7 @@ w-transaction-list {
     width: 100%;
   }
 
-  w-visible {
+  .w-visible {
     min-height: 74px;
   }
 
