--- a/src/modules/ui/directives/visible/visible.less
+++ b/src/modules/ui/directives/visible/visible.less
@@ -1,4 +1,4 @@
-w-visible {
+.w-visible {
   display: flex;
   position: relative;
   width: 100%;
